# Code-Meets-Reality

./: README.md  ai_service.py  app.py  auth_demo_template.py  code_executor.py  main.py  models.py  pyproject.toml  temp_file
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1746729265368.txt  Pasted-body-margin-0-font-family-Segoe-UI-Arial-sans-serif-background-f7f8fa-c-1746462297178.txt  Pasted-export-function-Sidebar-root-root-innerHTML-div-class-sidebar-icon-id-referen-1746462401582.txt  Pasted-hey-I-have-an-idea-for-Project-Overview-Code-Meets-Real-Code-Meets-Reality-is-a-learning-platform-f-1746460384631.txt
replit_agent/: architecture.md
routers/: ai.py  auth.py  code_runner.py  debugger.py  history.py  real_world.py
services/: ai_service.py  code_service.py  debugger_service.py
static/css/: style.css  styles.css
static/js/: ai-assistant.js  app.js  code-examples.js  complexity-analyzer.js  concept-popup.js  editor.js  if_else_handler.js  main.js  visual-output.js
static/js/components/: AuthenticationExample.js  CodeEditor.js  ConceptExamples.js  ConceptExamples.js.bak  ConsoleOutput.js  Helpline.js  InteractiveDemo.js  PopupCanvas.js  PracticeArea.js  RealWorldCode.js  Sidebar.js  Sidebar.js.backup  if_else_demo.js
static/js/examples/: auth_example.js
templates/: index.html  new_index.html
