[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-meets-reality"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
description = "Interactive learning platform that connects coding concepts to real-world applications"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
packages = ["code_meets_reality"]

[project.scripts]
start = "code_meets_reality.app:main"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pydantic = "^1.10.7"
openai = "^1.3.0"
flask-dance = "^6.0.0"
flask-login = "^0.6.2"
sqlalchemy = "^2.0.0"
flask-sqlalchemy = "^3.0.0"
jwt = "^1.3.1"
pyjwt = "^2.6.0"
requests = "^2.31.0"
